crates/pardosa-schema/tests/compile_fail/nested_isize.rs
use pardosa_schema::GenomeSafe;
#[derive(GenomeSafe)]
struct Bad {
    offset: Option<isize>,
}
fn main() {}
